# bin

./: Cargo.toml  docker-compose.yml  fly.toml  readme.md
.github/workflows/: docker.yml
contrib/cli/: client
src/models/: pretty.rs  response_wrapper.rs
src/routes/: pretty_retrieve.rs  retrieve.rs
templates/: index.html.tera
