[package]
name = "bin"
version = "2.2.1"
authors = ["Gunwant Jain <mail@wantguns.dev>"]
edition = "2021"
build = "build.rs"

[dependencies]
rand = "0.8"
rocket = "0.5.0"
tree_magic = "0.2.3"
syntect = "5.2"
rust-embed="8.4"
clap = { version = "4.5", features = ["derive", "env"] }
once_cell = "1"
sha256 = "1"
time = { version = "0.3", features = ["formatting"] }
mime_guess = "2"

[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["tera"]

